# Echll-Benchmark

./: CMakeLists.txt  COPYING  README.md  defs.hpp  global.cpp  global.hpp  linpackc.c  linpackc.cpp  linpackc.h  linpackc.hpp  main.cpp  models.hpp  timer.hpp
docs/: tutorials.md
examples/: s0.tgf
examples/grid_4000_2/: root.tgf  s0.tgf  s1.tgf
examples/linked_10000_4/: root.tgf  s0.tgf  s1.tgf  s2.tgf  s3.tgf
examples/linked_10000_8/: root.tgf  s0.tgf  s1.tgf  s2.tgf  s3.tgf  s4.tgf  s5.tgf  s6.tgf  s7.tgf
examples/linked_2000_2/: root.tgf  s0.tgf  s1.tgf
examples/linked_2000_4/: root.tgf  s0.tgf  s1.tgf  s2.tgf  s3.tgf
examples/tree_10_2/: root.tgf  s1.tgf
examples/tree_20000_16/: root.tgf  s0.tgf  s1.tgf  s10.tgf  s11.tgf  s12.tgf  s13.tgf  s14.tgf  s15.tgf  s2.tgf  s3.tgf  s4.tgf  s5.tgf  s6.tgf  s7.tgf  s8.tgf  s9.tgf
examples/tree_20000_4/: root.tgf  s0.tgf  s1.tgf  s2.tgf  s3.tgf
examples/tree_20000_8/: root.tgf  s0.tgf  s1.tgf  s2.tgf  s3.tgf  s4.tgf  s5.tgf  s6.tgf  s7.tgf
examples/tree_5000_2/: root.tgf  s0.tgf  s1.tgf
examples/tree_5000_8/: root.tgf  s0.tgf  s1.tgf  s2.tgf  s3.tgf  s4.tgf  s5.tgf  s6.tgf  s7.tgf
tests/: try-linpack.cpp
